Show build time and commit title in UI
Adds build time and commit title display to the bottom bar in App.svelte using new global constants. Updates Vite config to inject these values at build time, and workflow to set the commit title. Also adds a new macro action and minor UI/logic tweaks.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,6 +29,8 @@ jobs:
         with:
           bun-version: latest
 
+      - run: |
+          echo "COMMIT_TITLE=$(git log -1 --pretty=%s)" >> $GITHUB_ENV
       - run: bun install
       - run: bun run build
 
